# bpmn-robots-user-interface

./: .gitignore
graphical_ui/: CMakeLists.txt  package.xml
graphical_ui/gui/: InputHandler.py  MainWindow.py  main.py  mainwindow.ui
graphical_ui/src/: Ui_main_window.py  main.py  main_window.ui
interface_msgs/: CMakeLists.txt  package.xml
interface_msgs/msg/: Service.msg
interface_msgs/srv/: Complete.srv  GetMessage.srv  GetVariable.srv  SendMessage.srv  SendSignal.srv  ServiceList.srv  SetVariable.srv  ThrowError.srv
interface_process_manager/: CMakeLists.txt  package.xml
interface_process_manager/include/interface_process_manager/: interface_process_manager.hpp
interface_ui/: CMakeLists.txt  package.xml
interface_ui/src/: test.py  user_interface.py  user_interface_node.py
interface_ui/src/interface_ui/: user_interface.py
user_interface/: CMakeLists.txt  package.xml
