<?xml version="1.0"?>
<package format="2">
  <name>interface_msgs</name>
  <version>0.0.0</version>
  <description>The interface_msgs package which provides the msgs and srvs for the user interface.</description>
  <maintainer email="justinwhtkr@gmail.com">justin</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>

  <export></export>
</package>
