<?xml version="1.0"?>
<package format="2">
  <name>interface_process_manager</name>
  <version>0.0.0</version>
  <description>The interface_process_manager package which has a process manager that functions with the ui.</description>
  <maintainer email="justinwhtkr@gmail.com">justin</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- ROS Packages -->
  <depend>roscpp</depend>
  <!-- Architecture Packages -->
  <depend>behavior_manager</depend>
  <!-- BPMN Interface Packages -->
  <depend>bpmn_interface</depend>
  <!-- Camunda API Packages -->
  <depend>camunda_c_api</depend>
  <!-- Message Packages -->
  <depend>architecture_msgs</depend>
  <depend>interface_msgs</depend>

  <export></export>
</package>
