<?xml version="1.0"?>
<package format="2">
  <name>user_interface</name>
  <version>0.0.0</version>
  <description>The user_interface metapackage which provides a way to interact with behaviors.</description>
  <maintainer email="justinwhtkr@gmail.com">justin</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
    <metapackage/>
  </export>
</package>
